--- a/index.html
+++ b/index.html
@@ -287,33 +287,16 @@
     <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Certifications">
       <div class="w-100">
-        <h2 class="mb-5">Professional Certifications</h2>
+        <h2 class="mb-5">Links</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
-            Certified Scrum Product Owner - Scrum Alliance, 001320781 in Feb-2022</li>
+            https://www.zillow.com/community/stone-water-village/2059953123_zpid/?utm_campaign=iosappmessage&utm_medium=referral&utm_source=txtshare</li>
           <li>		
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
-            Certified Scrum Master - Scrum Alliance, 0013207811 in Mar-2022</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            CyberArk Certified Trustee - CyberArk, 1221990 in Sep-2020</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            Certified Access Management Specialist - Identity Management Institute, 3944 in Feb-2018</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            Certified Identity and Access Manager - Identity Management Institute, 3676 in Jul-2017</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            ITIL Foundation Certificate in IT Service Management - EXIN & AXELOS, 5946432 in Mar- 2017</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            Six Sigma Yellow Belt - Six Sigma Study, 679493 in Jan-2019</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            SAS Certified Base Programmer for SAS 9 in Sep-2015</li>
+            https://www.ryanhomes.com/new-homes/communities/10222120151855/products/58678/new-jersey/roxbury-township/stone-water-village/roanoke</li>
+
 
 
 	   </ul>
