--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         <div class="subheading mb-5">Parsippany, New Jersey - 07054 | +1-405-762-3053 |
           <a href="mailto:name@email.com">mohankrishna.chadram@gmail.com</a>
         </div>
-        <p class="lead mb-0"> Single Family Home </p>
+        <p class="lead mb-0"> Type: Single Family Home </p>
 		<p class="lead mb-5"> </p>
-	<p class="lead mb-0"> Responsible for managing the complete Project life cycle that includes Scope identification, defining Project Roadmap, Requirement gathering, Analysis, Design, Development, testing, implementation, enhancements, Gap analysis and Risk Management of Software Applications and Services using Waterfall and Agile methodology.</p>
+	<p class="lead mb-0"> Year built: 2023 </p>
 		<p class="lead mb-5"> </p>
-	<p class="lead mb-0"> I am also a certified Scrum Master who can lead, schedule, plan and facilitate continuous Business process improvement events. Experienced in leading the Teams Management responsibilities that includes Project coordination, planning, execution and release management.</p>
+	<p class="lead mb-0"> Total interior livable area: 3,645 sqft</p>
 		<p class="lead mb-5"> </p>
         <div class="social-icons">
 	<a href="img/Mohan_Chadram_Resume.pdf">
