--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#Links">Links</a>
+          <a class="nav-link js-scroll-trigger" href="#URLS">URLs</a>
         </li>
       </ul>
     </div>
