--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Mohan Krishna Chadram1</span>
+      <span class="d-block d-lg-none">MY Home</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Mohan.jpg" alt="">
       </span>
@@ -50,10 +50,10 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h1 class="mb-0">
-          <span class="text-primary">Mohan Krishna Chadram</span>
+          <span class="text-primary">My Home</span>
         </h1>
-        <div class="subheading mb-5">Parsippany, New Jersey - 07054 | +1-405-762-3053 |
-          <a href="mailto:name@email.com">mohankrishna.chadram@gmail.com</a>
+        <div class="subheading mb-5">New Jersey
+          <a href="mailto:name@email.com"></a>
         </div>
         <p class="lead mb-0"> Type: Single Family Home </p>
 		<p class="lead mb-5"> </p>
