--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">MY Home</span>
+      <span class="d-block d-lg-none">My Home</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Mohan.jpg" alt="">
       </span>
@@ -41,7 +41,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#URLS">URLs</a>
+          <a class="nav-link js-scroll-trigger" href="#Certifications">Certifications</a>
         </li>
       </ul>
     </div>
@@ -52,14 +52,14 @@
         <h1 class="mb-0">
           <span class="text-primary">My Home</span>
         </h1>
-        <div class="subheading mb-5">New Jersey
+        <div class="subheading mb-5">Landing, New Jersey - 07850 |
           <a href="mailto:name@email.com"></a>
         </div>
         <p class="lead mb-0"> Type: Single Family Home </p>
 		<p class="lead mb-5"> </p>
 	<p class="lead mb-0"> Year built: 2023 </p>
 		<p class="lead mb-5"> </p>
-	<p class="lead mb-0"> Total interior livable area: 3,645 sqft</p>
+	<p class="lead mb-0"> Total interior livable area: 3,645 sqft </p>
 		<p class="lead mb-5"> </p>
         <div class="social-icons">
 	<a href="img/Mohan_Chadram_Resume.pdf">
@@ -287,16 +287,33 @@
     <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Certifications">
       <div class="w-100">
-        <h2 class="mb-5">Links</h2>
+        <h2 class="mb-5">Professional Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
-            https://www.zillow.com/community/stone-water-village/2059953123_zpid/?utm_campaign=iosappmessage&utm_medium=referral&utm_source=txtshare</li>
+            Certified Scrum Product Owner - Scrum Alliance, 001320781 in Feb-2022</li>
           <li>		
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
-            https://www.ryanhomes.com/new-homes/communities/10222120151855/products/58678/new-jersey/roxbury-township/stone-water-village/roanoke</li>
-
+            Certified Scrum Master - Scrum Alliance, 0013207811 in Mar-2022</li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            CyberArk Certified Trustee - CyberArk, 1221990 in Sep-2020</li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            Certified Access Management Specialist - Identity Management Institute, 3944 in Feb-2018</li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            Certified Identity and Access Manager - Identity Management Institute, 3676 in Jul-2017</li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            ITIL Foundation Certificate in IT Service Management - EXIN & AXELOS, 5946432 in Mar- 2017</li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            Six Sigma Yellow Belt - Six Sigma Study, 679493 in Jan-2019</li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            SAS Certified Base Programmer for SAS 9 in Sep-2015</li>
 
 
 	   </ul>
