--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 	<a href="img/Mohan_Chadram_Resume.pdf">
         <i class="far fa-address-card" title="Resume"> </i>
         </a>
-        <a href="https://www.linkedin.com/in/mohanchadram/">
-        <i class="fab fa-linkedin-in"></i>
+        <a href="https://www.zillow.com/homedetails/Stone-Water-Village-Mount-Arlington-NJ-07856/2059953123_zpid/?utm_campaign=iosappmessage&utm_medium=referral&utm_source=txtshare">
+        <i class="fab fa-zillow"></i>
         </a>
         <a href="https://github.com/mohikrish">
         <i class="fab fa-github"></i>
