--- a/index.html
+++ b/index.html
@@ -285,15 +285,16 @@
     </section>
    
     <hr class="m-0">
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Certifications">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Links">
       <div class="w-100">
-        <h2 class="mb-5">Professional Certifications</h2>
+        <h2 class="mb-5">Links</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
-            Certified Scrum Product Owner - Scrum Alliance, 001320781 in Feb-2022</li>
+            <a href="https://www.ryanhomes.com/new-homes/communities/10222120151855/products/58678/new-jersey/roxbury-township/stone-water-village/roanoke">Ryan Homes</a></li>
           <li>		
           <li>
+	
             <i class="fa-li fa fa-certificate text-warning"></i>
             Certified Scrum Master - Scrum Alliance, 0013207811 in Mar-2022</li>
           <li>
