--- a/index.html
+++ b/index.html
@@ -294,29 +294,8 @@
             <a href="https://www.ryanhomes.com/new-homes/communities/10222120151855/products/58678/new-jersey/roxbury-township/stone-water-village/roanoke">Ryan Homes</a></li>
           <li>		
           <li>
-	
             <i class="fa-li fa fa-certificate text-warning"></i>
-            Certified Scrum Master - Scrum Alliance, 0013207811 in Mar-2022</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            CyberArk Certified Trustee - CyberArk, 1221990 in Sep-2020</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            Certified Access Management Specialist - Identity Management Institute, 3944 in Feb-2018</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            Certified Identity and Access Manager - Identity Management Institute, 3676 in Jul-2017</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            ITIL Foundation Certificate in IT Service Management - EXIN & AXELOS, 5946432 in Mar- 2017</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            Six Sigma Yellow Belt - Six Sigma Study, 679493 in Jan-2019</li>
-          <li>
-            <i class="fa-li fa fa-certificate text-warning"></i>
-            SAS Certified Base Programmer for SAS 9 in Sep-2015</li>
-
-
+            <a href="https://www.zillow.com/homedetails/Stone-Water-Village-Mount-Arlington-NJ-07856/2059953123_zpid/?utm_campaign=iosappmessage&utm_medium=referral&utm_source=txtshare">Zillow</a></li>
 	   </ul>
       </div>
   </div>
