--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <img src="img/sql.png" alt="" style="width:50px;height:50px;">
+            <img src="img/sql.png" alt="" >
           </li>
           <li class="list-inline-item">
             <img src="img/python.png" alt="" style="width:70px;height:50px;">
