--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          <a class="nav-link js-scroll-trigger" href="#Route">Route</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -219,10 +219,13 @@
       </div>
     </section>
     <hr class="m-0">
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Route">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-  
+        <h2 class="mb-5">Route</h2>
+  <li>
+           
+            <a href="https://goo.gl/maps/937zDDsw1xTFTKYg9">Map Route</a></li>
+          <li>	
 
 
       </div>
