--- a/index.html
+++ b/index.html
@@ -62,15 +62,12 @@
 	<p class="lead mb-0"> Total interior livable area: 3,645 sqft </p>
 		<p class="lead mb-5"> </p>
         <div class="social-icons">
-	<a href="img/Mohan_Chadram_Resume.pdf">
-        <i class="far fa-address-card" title="Resume"> </i>
+	
+     
         </a>
         <a href="https://www.zillow.com/homedetails/Stone-Water-Village-Mount-Arlington-NJ-07856/2059953123_zpid/?utm_campaign=iosappmessage&utm_medium=referral&utm_source=txtshare">
-        <i class="fab fa-zillow"></i>
-        </a>
-        <a href="https://github.com/mohikrish">
-        <i class="fab fa-github"></i>
-        </a>
+        <i class="fa fa-home"></i>
+ 
         </div>
       </div>
     </section>
@@ -168,15 +165,15 @@
       </div>
     </section>
     <hr class="m-0">
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Photos">
       <div class="w-100">
-        <h2 class="mb-5">Education</h2>
+        <h2 class="mb-5">Photos</h2>
 	      
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"> International MBA Institute </h3>
-            <div class="subheading mb-3"> Master of Business Administration in Management </div>
-			<div> Management </div>
+  
+ 
+	
 
           </div>
           <div class="resume-date text-md-right">
