--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="nav-link js-scroll-trigger" href="#Route">Route</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a class="nav-link js-scroll-trigger" href="#Photos">Photos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#Links">Links</a>
