--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#Journey">Journey</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#Route">Route</a>
