--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 		<p class="lead mb-5"> </p>
 	<p class="lead mb-0"> Total interior livable area: 3,645 sqft </p>
 		<p class="lead mb-5"> </p>
+        <p class="lead mb-0"> Total Plot Size:  13,927 sqft  </p>
+		<p class="lead mb-5"> </p>
         <div class="social-icons">
         </a>
         <a href="https://www.zillow.com/homedetails/Stone-Water-Village-Mount-Arlington-NJ-07856/2059953123_zpid/?utm_campaign=iosappmessage&utm_medium=referral&utm_source=txtshare">
