--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
 		<p class="lead mb-5"> </p>
         <p class="lead mb-0"> Total Plot Size:  13,927 sqft  </p>
 		<p class="lead mb-5"> </p>
+        <p class="lead mb-0"> Community: Stone Water Village </p>
+		<p class="lead mb-5"> </p>
+
+       <p class="lead mb-0"> Homesite: C004 </p>
+		<p class="lead mb-5"> </p>
+
+<p class="lead mb-0"> Address: 3 Vansickle Court, Roxbury Township, NJ 07850</p>
+		<p class="lead mb-5"> </p>
+
         <div class="social-icons">
         </a>
         <a href="https://www.zillow.com/homedetails/Stone-Water-Village-Mount-Arlington-NJ-07856/2059953123_zpid/?utm_campaign=iosappmessage&utm_medium=referral&utm_source=txtshare">
@@ -118,3 +127,4 @@
   <script src="js/resume.min.js"></script>
 </body>
 </html>
+
