--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     </section>
     <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Journey"> 
+	            <p class="lead mb-0"> Address: 3 Vansickle Court, Roxbury Township, NJ 07850</p>
+		<p class="lead mb-5"> </p>
       </div>
 	   
     </section>
