--- a/index.html
+++ b/index.html
@@ -74,13 +74,14 @@
         <div class="social-icons">
         </a>
         <a href="https://www.zillow.com/homedetails/Stone-Water-Village-Mount-Arlington-NJ-07856/2059953123_zpid/?utm_campaign=iosappmessage&utm_medium=referral&utm_source=txtshare">
-   
+        <i class="fab fa-linkedin-in"></i>
 
 	    
     </section>
     <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Journey"> 
 	            <p class="lead mb-0"> Address: 3 Vansickle Court, Roxbury Township, NJ 07850</p>
+	  
 		<p class="lead mb-5"> </p>
       </div>
 	   
