--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
         <h1 class="mb-0">
           <span class="text-primary">MY Home</span>
         </h1>
-        <div class="subheading mb-5">Roxbury, New Jersey - 07850 | +1-405-762-3053 | +1-405-762-5989 |
+        <div class="subheading mb-5">Roxbury, New Jersey - 07850
           <a href="mailto:name@email.com">mohiyouva@gmail.com</a>
         </div>
+	<div class="subheading mb-5"> +1-405-762-3053 | +1-405-762-5989 |
+          <a href="mailto:name@email.com">mohiyouva@gmail.com</a>
+        </div>      
+	      
         <p class="lead mb-0">Type: Single Family Home </p>
 		<p class="lead mb-5"> </p>
 	<p class="lead mb-0">Year built: 2023</p>
