--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
 	      
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-10">Business Analyst</h3>
-            <div class="subheading mb-0"> Client: Horizon Blue Cross Blue Shiled </div>  
-	  <div class="subheading mb-0">
+            <h3 class="mb-10">Construction</h3>
+            <div class="subheading mb-0">Footing</div>  
+      <!--  <div class="subheading mb-0">
           <div class="row">
           <div class="col"> Employer: Natsoft Corporation </div>
           <div class="col text-right"> April 2020 - Till Date </div>
           </div>
-          </div>		   	
-         <div class="subheading mb-0"> Enterprise Big Data Projects </div>
+          </div> 	   	
+         <div class="subheading mb-0"> Enterprise Big Data Projects </div>  -->
          <p> The objective of the Enterprise Big Data Projects is to solution, design, develop and implement the large-scale enterprise solutions on cloud. Implement Claims migrations, Healthcare benefits, Contract renewals, Enrollments and Rating Engine projects into Hadoop Framework using agile methodologies. Deliver Data ingestions, Analytical & Audit Reporting needs and enhancements adapting to quality standards and overseeing smooth implementation of the projects involving multi-vendor accounts. Focused on client first approach and delivering the services based on business needs without compromising on quality standards, managing financials and overseeing smooth implementation of the projects involving multi-vendor accounts. <p>
 		 		 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
