--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
     <h2 class="mb-5">Journey</h2>      
     <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
     <div class="resume-content">
+	    
+    <h3 class="mb-10">Foundation</h3>
+    <div class="subheading mb-0">Pooja</div>  
+    <img src="Foundation1.jpg" class="w3-round" alt="Norway" style="width:80%" >	   
+    <img src="Foundation2.heic" class="w3-round" alt="Norway" style="width:80%" >	
+    <img src="Foundation3.heic" class="w3-round" alt="Norway" style="width:80%" >	
+    <hr>    
     <h3 class="mb-10">Construction</h3>
     <div class="subheading mb-0">Footing</div>  
     <img src="footing.jpg" class="w3-round" alt="Norway" style="width:80%" >
