--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
   <div class="w-100">
   <h1 class="mb-0">
    <span class="text-primary">MY Home</span>
+	  
+    <img src="MY_Home.jpg" class="w3-round" alt="Norway" style="width:80%" >
+	  
         </h1>
         <div class="subheading mb-5">Roxbury, New Jersey - 07850 | +1-405-762-3053 | +1-405-762-5989 | 
           <a href="mailto:name@email.com">mohiyouva@gmail.com</a>
