--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
   <div class="w-100">
   <h1 class="mb-0">
-   <span class="text-primary">MY Home</span>
+  <!--  <span class="text-primary">MY Home</span>  -->
 	  
     <img src="MY_Home.jpg" class="w3-round" alt="Norway" style="width:30%" >
 	  
