--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 	<p class="lead mb-0"> Address: 3 Vansickle Court, Roxbury Township, NJ 07850 </p>
 		<p class="lead mb-5"> </p>
 
+          <!--
         <div class="social-icons">
 	<a href="img/Mohan_Chadram_Resume.pdf">
         <i class="far fa-address-card" title="Resume"> </i>
@@ -86,7 +87,7 @@
         <a href="https://github.com/mohikrish">
         <i class="fab fa-github"></i>
         </a>
-        </div>
+        </div> -->
       </div>
 	  
 	  
