--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 	      
         <p class="lead mb-0">Type: Single Family Home </p>
-		<p class="lead mb-5"> </p>
+	<!--	<p class="lead mb-5"> </p> -->
 	<p class="lead mb-0">Year built: 2023</p>
 		<p class="lead mb-5"> </p>
 	<p class="lead mb-0"> Total interior livable area: 3,645 sqft</p>
