--- a/index.html
+++ b/index.html
@@ -61,12 +61,9 @@
           <a href="mailto:name@email.com">mohiyouva@gmail.com</a>
         </div>
 	      
-        <p class="lead mb-0">Type: Single Family Home1 </p>
-	<!--	<p class="lead mb-5"> </p> -->
+        <p class="lead mb-0">Type: Single Family Home</p>
 	<p class="lead mb-0">Year built: 2023</p>
-		<p class="lead mb-5"> </p>
 	<p class="lead mb-0"> Total interior livable area: 3,645 sqft</p>
-		<p class="lead mb-5"> </p>
 	<p class="lead mb-0"> Total Plot Size: 13,927 sqft</p>
 		<p class="lead mb-5"> </p>
 	<p class="lead mb-0"> Community: Stone Water Village</p>
