--- a/index.html
+++ b/index.html
@@ -57,21 +57,17 @@
     <img src="MY_Home.jpg" class="w3-round" alt="Norway" style="width:30%" >
 	  
         </h1>
-        <div class="subheading mb-5">Roxbury, New Jersey - 07850 | +1-405-762-3053 | +1-405-762-5989 | 
-          <a href="mailto:name@email.com">mohiyouva@gmail.com</a>
+        <div class="subheading mb-5">Roxbury, New Jersey - 07850
+        <!--    <a href="mailto:name@email.com">mohiyouva@gmail.com</a>  -->
         </div>
-	      
+	 <!--  | +1-405-762-3053 | +1-405-762-5989 |        -->
         <p class="lead mb-0">Type: Single Family Home</p>
 	<p class="lead mb-0">Year built: 2023</p>
 	<p class="lead mb-0"> Total interior livable area: 3,645 sqft</p>
 	<p class="lead mb-0"> Total Plot Size: 13,927 sqft</p>
-		<p class="lead mb-5"> </p>
 	<p class="lead mb-0"> Community: Stone Water Village</p>
-		<p class="lead mb-5"> </p>
 	<p class="lead mb-0"> Homesite: C004 </p>
-		<p class="lead mb-5"> </p>
 	<p class="lead mb-0"> Address: 3 Vansickle Court, Roxbury Township, NJ 07850 </p>
-		<p class="lead mb-5"> </p>
 
           <!--
         <div class="social-icons">
