--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#Route">Route</a>
         </li>
+	        <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#Photos">Photos</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#Links">Links</a>
         </li>
@@ -107,14 +108,15 @@
     </div>
     </div>
     </div>
-	  
+	
+	     <!-- 
     </section>
     <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Photos">
     <div class="w-100">
     <h2 class="mb-5">Photos</h2>   
     <p class="lead mb-0">Loading</p>
-    </div>
+    </div> -->
 
     </section>
     <hr class="m-0">
