--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <h1 class="mb-0">
   <!--  <span class="text-primary">MY Home</span>  -->
 	  
-    <img src="MY_Home.jpg" class="w3-round" alt="Norway" style="width:30%" >
+    <img src="Model_Home.heic" class="w3-round" alt="Norway" style="width:50%" >
 	  
         </h1>
         <div class="subheading mb-5">Roxbury, New Jersey - 07850
