--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">My Home</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Model_Home.png" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Model_Home.png" alt="" style="width:50%" >
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
