--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">My Home</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="Model_Home.png" alt="" style="width:50%" >
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="Model_Home.png" alt="" >
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
     <img src="Model_Home.png" class="w3-round" alt="Norway" style="width:50%" >
 	  
         </h1>
-        <div class="subheading mb-5">Roxbury, New Jersey - 07851
+        <div class="subheading mb-5">Roxbury, New Jersey - 07850
         <!--    <a href="mailto:name@email.com">mohiyouva@gmail.com</a>  -->
         </div>
 	 <!--  | +1-405-762-3053 | +1-405-762-5989 |        -->
