--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
     <h2 class="mb-5">Journey</h2>      
     <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
     <div class="resume-content">
-	    
+	
+
+    <h3 class="mb-10">Community</h3>
+    <div class="subheading mb-0">Stonewater</div>  
+    <img src="Stomewater.heic" class="w3-round" alt="Norway" style="width:80%" >
+
+    <hr>    
     <h3 class="mb-10">Foundation</h3>
     <div class="subheading mb-0">Pooja</div>  
     <img src="Foundation1.jpg" class="w3-round" alt="Norway" style="width:80%" >	   
