--- a/index.html
+++ b/index.html
@@ -94,16 +94,17 @@
     <div class="resume-content">
 	
 
-    <h3 class="mb-10">Community</h3>
-    <div class="subheading mb-0">Stonewater</div>  
-    <img src="Stomewater.heic" class="w3-round" alt="Norway" style="width:80%" >
-
-    <hr>    
     <h3 class="mb-10">Foundation</h3>
     <div class="subheading mb-0">Pooja</div>  
     <img src="Foundation1.jpg" class="w3-round" alt="Norway" style="width:80%" >	   
     <img src="Foundation2.heic" class="w3-round" alt="Norway" style="width:80%" >	
-    <img src="Foundation3.heic" class="w3-round" alt="Norway" style="width:80%" >	
+    <img src="Foundation3.heic" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="Foundation4.jpg" class="w3-round" alt="Norway" style="width:80%" >
+
+    <hr>
+    <h3 class="mb-10">Community</h3>
+    <div class="subheading mb-0">Stonewater</div>  
+    <img src="Stonewater.heic" class="w3-round" alt="Norway" style="width:80%" >	
     <hr>    
     <h3 class="mb-10">Construction</h3>
     <div class="subheading mb-0">Footing</div>  
