--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <img src="Foundation1.jpg" class="w3-round" alt="Norway" style="width:80%" >	   
     <img src="Foundation2.heic" class="w3-round" alt="Norway" style="width:80%" >	
     <img src="Foundation3.heic" class="w3-round" alt="Norway" style="width:80%" >
-    <img src="Foundation4.jpg" class="w3-round" alt="Norway" style="width:80%" >
+   
 
     <hr>
     <h3 class="mb-10">Community</h3>
@@ -112,6 +112,8 @@
     <hr>	 
     <div class="subheading mb-0">Foundation Walls</div>  
     <img src="foundation_walls.jpg" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="foundation_walls_top.jpg" class="w3-round" alt="Norway" style="width:80%" >
+
     </div>
     </div>
     </div>
