--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <hr>	 
     <div class="subheading mb-0">Foundation Walls</div>  
     <img src="foundation_walls.jpg" class="w3-round" alt="Norway" style="width:80%" >
-    <img src="foundation_walls_top.jpg" class="w3-round" alt="Norway" style="width:100%" >
+    <img src="foundation_walls_top.JPG" class="w3-round" alt="Norway" style="width:100%" >
 
     </div>
     </div>
