--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <hr>
     <h3 class="mb-10">Community</h3>
-    <div class="subheading mb-0">Stonewater</div>  
+    <div class="subheading mb-0">Entrance</div>  
     <img src="Stonewater.heic" class="w3-round" alt="Norway" style="width:80%" >	
     <hr>    
     <h3 class="mb-10">Construction</h3>
@@ -112,7 +112,7 @@
     <hr>	 
     <div class="subheading mb-0">Foundation Walls</div>  
     <img src="foundation_walls.jpg" class="w3-round" alt="Norway" style="width:80%" >
-    <img src="foundation_walls_top.JPG" class="w3-round" alt="Norway" style="width:100%" >
+    <img src="foundation_walls_top.JPG" class="w3-round" alt="Norway" style="width:80%" >
 
     </div>
     </div>
