--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
     <img src="Foundation1.jpg" class="w3-round" alt="Norway" style="width:80%" >	   
     <img src="Foundation2.heic" class="w3-round" alt="Norway" style="width:80%" >	
     <img src="Foundation3.heic" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="foundation_walls1.heic" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="foundation_walls2.heic" class="w3-round" alt="Norway" style="width:80%" >
+
    
 
     <hr>
