--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
     <img src="foundation_walls_top.JPG" class="w3-round" alt="Norway" style="width:80%" >
     <img src="foundation_walls1.heic" class="w3-round" alt="Norway" style="width:80%" >
     <img src="foundation_walls2.heic" class="w3-round" alt="Norway" style="width:80%" >
+    <hr>	 
+    <div class="subheading mb-0">Framing</div>
+    <img src="Framing1.heic" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="Framing2.heic" class="w3-round" alt="Norway" style="width:80%" >
 
     </div>
     </div>
