--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     <img src="foundation_walls2.heic" class="w3-round" alt="Norway" style="width:80%" >
     <hr>	 
     <div class="subheading mb-0">Framing</div>
-    <img src="Framing1.heif" class="w3-round" alt="Norway" style="width:80%" >
-    <img src="Framing2.heif" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="Framing_1.heic" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="Framing_2.heic" class="w3-round" alt="Norway" style="width:80%" >
 
     </div>
     </div>
