--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <img src="foundation_walls2.heic" class="w3-round" alt="Norway" style="width:80%" >
     <hr>	 
     <div class="subheading mb-0">Framing</div>
-    <img src="Framing_1.heic" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="Framing__1.jpg" class="w3-round" alt="Norway" style="width:80%" >
     <img src="Framing_2.heic" class="w3-round" alt="Norway" style="width:80%" >
 
     </div>
