--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <hr>	 
     <div class="subheading mb-0">Framing</div>
     <img src="Framing__1.jpg" class="w3-round" alt="Norway" style="width:80%" >
-    <img src="Framing_2.heic" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="Framing__2.jpg" class="w3-round" alt="Norway" style="width:80%" >
 
     </div>
     </div>
