--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     <img src="foundation_walls2.heic" class="w3-round" alt="Norway" style="width:80%" >
     <hr>	 
     <div class="subheading mb-0">Framing</div>
-    <img src="Framing__1.jpg" class="w3-round" alt="Norway" style="width:80%" >
-    <img src="Framing__2.jpg" class="w3-round" alt="Norway" style="width:80%" >
+    <img src="Framing__1.jpg" class="w3-round" alt="Norway" style="width:80%" border: 2px solid #d2a679 >
+    <img src="Framing__2.jpg" class="w3-round" alt="Norway" style="width:80%" border: 2px solid #d2a679 >
 
     </div>
     </div>
