--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
     <hr>
     <img src="Framing__2.jpg" class="w3-round" alt="Norway" style="width:80%" border="2px solid #d2a679">
     <hr>
+    <hr>
+    <div class="subheading mb-0">Roof Truss Installation</div>
+    <img src="Roof_Truss_Installation.jpg" class="w3-round" alt="Norway" style="width:80%" border="2px solid #d2a679">
+    <img src="Roof_Truss_Installation_complete1.heic" class="w3-round" alt="Norway" style="width:80%" border="2px solid #d2a679">
+    <img src="Roof_Truss_Installation_complete2.heic" class="w3-round" alt="Norway" style="width:80%" border="2px solid #d2a679">
+    <hr>
     </div>
     </div>
     </div>
