--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
     <hr>
     <img src="Roof_Truss_Installation_complete2.jpg" class="w3-round" alt="Norway" style="width:80%" border="2px solid #d2a679">
     <hr>
+    <img src="Roof_Truss_Installation_complete3.jpg" class="w3-round" alt="Norway" style="width:80%" border="2px solid #d2a679">
+    <hr>
     <hr>
     </div>
     </div>
