--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
     <img src="Roof_Truss_Installation_complete3.jpg" class="w3-round" alt="Norway" style="width:80%" border="2px solid #d2a679">
     <hr>
     <hr>
+    <div class="subheading mb-0">Roof Shingles Installation</div>
+    <img src="Roof_Installation1.jpg" class="w3-round" alt="Norway" style="width:80%" border="2px solid #d2a679">
+    <hr>
+    <hr>
     </div>
     </div>
     </div>
